<resources>
    <string name="app_name">Motif</string>
    <string name="motif_logo">motif logo</string>
    <string name="motif">MOTIF</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="transpose">Transpose</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="button">Button</string>
    <string name="detected_music_notes">Detected Music Notes:</string>
    <string name="play">Play</string>
    <string name="recorded_note">Note Played:</string>
    <string name="record">Record</string>
    <string name="stop">STOP</string>
    <string name="todo">TODO</string>
    <string name="go_back_to_dashboard">Back to dashboard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="welcome_to_motif">Welcome to Motif</string>
    <string name="open_menu">Open menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo2">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgott_password">Forgot password?</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="todo3">TODO</string>
    <string name="password">Password</string>
    <string name="input_password">Input password</string>
    <string name="go_to_signup">Go to Signup</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="slogin">SLogin</string>
    <string name="username">Username</string>
    <string name="input_username">Input username</string>
    <string name="motifs">MOTIF</string>
    <string name="senior_project_2024">SENIOR PROJECT 2024</string>
    <string name="senior_project">Senior Project</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_your_new_musical_journey">SignUp to start your new musical journey</string>
    <string name="email">Email</string>
    <string name="input_email">Input email</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="go">GO</string>
    <string name="click_to_sign_up">Click to sign up!</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="go_to_login">Go to login!</string>
    <string name="record_audio">Record audio</string>
    <string name="stop_recording">Stop recording</string>
    <string name="notepad">Notepad</string>
    <string name="write_your_note_here">Write your note here...</string>
    <string name="save">Save</string>
    <string name="note_preview">Note preview</string>
    <string name="your_notes">Your notes</string>
    <string name="new_note">New Note</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="notifications_and_appearance">Notifications And Appearance</string>
    <string name="reset_password">Reset Password</string>
    <string name="logo">logo</string>
    <string name="a">A</string>
    <string name="chords">CHORDS</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="cs">C#</string>
    <string name="as">A#</string>
    <string name="d">D</string>
    <string name="ds">D#</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="fs">F#</string>
    <string name="g">G</string>
    <string name="gs">G#</string>
    <string name="chord_library">Chord Library</string>
    <string name="chord_categories">Chord Categories</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="flat">Flat</string>
    <string name="enter_notes_e_g_a_b_c">Enter notes (e.g., A B C)</string>
    <string name="sharp">Sharp</string>
    <string name="transpose_by_e_g_1_1">Transpose by (e.g., 1, -1)</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="share">Share</string>
</resources>