<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        style="@style/LOGO"
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:transitionName="logo_image"
        android:contentDescription="@string/todo3" />

    <TextView
        style="@style/TEXT_MAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chords"
        android:textSize="40sp"
        android:transitionName="logo_text" />
    <TextView
        style="@style/TEXT"
        android:id="@+id/slogan_name"
        android:contentDescription="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chord_library"
        android:textSize="18sp" />

    <!-- First Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_C"
            android:text="@string/c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_Csharp"
            android:text="@string/cs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <!-- Second Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_D"
            android:text="@string/d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_Dsharp"
            android:text="@string/ds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <!-- Third Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_E"
            android:text="@string/e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_F"
            android:text="@string/f"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <!-- Fourth Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_Fsharp"
            android:text="@string/fs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_G"
            android:text="@string/g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <!-- Fifth Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_Gsharp"
            android:text="@string/gs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_A"
            android:text="@string/a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <!-- Sixth Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_Asharp"
            android:text="@string/as"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            style="@style/BUTTON"
            android:id="@+id/note_B"
            android:text="@string/b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>
