<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/abc"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/RecordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="16dp"
        android:text="@string/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_percent="0.25"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/StopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecordButton"
        app:layout_constraintWidth_percent="0.25"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/NoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorded_note"
        app:layout_constraintEnd_toEndOf="@id/RecordButton"
        app:layout_constraintStart_toStartOf="@id/RecordButton"
        app:layout_constraintTop_toTopOf="@id/RecordButton"
        android:layout_marginTop="-32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>