<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/SCREEN">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/abc"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/RecordButton"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/record_audio"
        android:text="@string/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/StopButton"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/stop_recording"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecordButton"
        app:layout_constraintVertical_bias="0.134"
        app:layout_constraintWidth_percent="0.25"
        tools:ignore="VisualLintButtonSize" />

    <Button
        style="@style/BUTTON"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_dashboard"
        android:contentDescription="@string/go_back_to_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>


    <TextView
        style="@style/TEXT_MAIN"
        android:id="@+id/NoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@id/RecordButton"
        app:layout_constraintStart_toStartOf="@id/RecordButton"
        app:layout_constraintTop_toTopOf="@id/RecordButton"
        android:layout_marginTop="-182dp"/>

    <TextView
        android:id="@+id/rateTextView"
        style="@style/TEXT_MAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="Frequency"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/RecordButton"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/RecordButton"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        style="@style/TEXT"
        android:id="@+id/StatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:typeface="sans"
        android:text=""
        app:layout_constraintEnd_toEndOf="@id/RecordButton"
        app:layout_constraintStart_toStartOf="@id/RecordButton"
        app:layout_constraintTop_toTopOf="@id/RecordButton"
        android:layout_marginTop="-62dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>